<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<parent>
		<artifactId>uom-language-demos</artifactId>
		<groupId>tech.uom.demo.lang</groupId>
		<version>2.2-SNAPSHOT</version>
	</parent>
	<modelVersion>4.0.0</modelVersion>
	<artifactId>valhalla</artifactId>
	<name>Project Valhalla Demos</name>
	<properties>
		<java.version>23</java.version>
	</properties>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
<!--
					<source>${java.version}</source>
					<target>${java.version}</target>
					<verbose>true</verbose>
					<fork>true</fork>
					<executable>${java.bin}/javac.exe</executable>
					<compilerVersion>${java.version}</compilerVersion>
					-->
					<release>${java.version}</release>
					<enablePreview>true</enablePreview>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<jvm>${java.bin}/java.exe</jvm>
					<argLine>--enable-preview</argLine>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.6.0</version>
				<executions>
					<execution>
						<goals>
							<goal>exec</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<mainClass>tech.uom.demo.valhalla.ValhallaDemo</mainClass>
					<!-- executable>${java.bin}/java.exe</executable -->
					<commandlineArgs>--enable-preview</commandlineArgs>
					<arguments>
					    <argument>--enable-preview</argument>
<!--					    
						<argument>-classpath</argument>
						<classpath />
						<argument>tech.uom.demo.valhalla.ValhallaDemo</argument>
-->						
					</arguments>
				</configuration>
			</plugin>

		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>tech.uom.lib</groupId>
			<artifactId>uom-lib-common</artifactId>
		</dependency>
		<dependency>
			<groupId>tech.units</groupId>
			<artifactId>indriya</artifactId>
		</dependency>
	</dependencies>

</project>